objects/ACLS_Missing_Information_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>ACLS_Field_API_Name__c</fullName>
        <description>Fields to check for missing information</description>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if metadata record is a active record</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACLS_MI_matching_field__c</fullName>
        <label>MI matching field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Object_Label__c</fullName>
        <description>Missing fields related object label</description>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Object_Name__c</fullName>
        <description>Missing fields related object</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Missing Information Configuration</label>
    <pluralLabel>Missing Informations Configuration</pluralLabel>
</CustomObject>